--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ crate-type = ["lib"]
 
 [dependencies]
 rand = "0.6"
+serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 rayon = "1.5"
 bit-vec = "0.6"
